# strava-mcp-server

./: .gitignore  README.md  main.py  pyproject.toml
src/strava_mcp_server/: server.py
