[project]
name = "strava-mcp-server"
version = "0.1.0"
description = "MCP server for Strava API integration with heart rate data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.9.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]

[project.scripts]
strava-mcp = "strava_mcp_server.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"